[package]
name = "jorzacan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jorzacan"
path = "src/main.rs"

[lib]
name = "jorzacan"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
anyhow = "1.0"
bitflags = "1.3"
byte_conv = "0.1.1"
clap = {version = "3.2.8", features = ["derive"]}
ctrlc = "3.2.2"
embedded-can = "0.4"
hex = "0.4"
itertools = "0.10"
libc = "0.2"
nb = "1.0"
neli = { version = "0.6", optional = false }
nix = "0.26"
pyo3 = { version = "0.17.3", feature = ["extension-module"] }
serial_test = "0.9"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs", version = "2.0.0-pre.0" }
