[package]
name = "jcan_python"
version = "0.1.10"
edition = "2021"
publish = false

[lib]
name = "jcan_python"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[dependencies]
jcan = { version = "*", path = "../jcan" }
pyo3 = { version = "0.17.3", features = ["abi3-py38", "extension-module", "generate-import-lib"] }

[build-dependencies]
pyo3-build-config = "*"

