[package]
name = "jcan"
version = "0.1.5"
edition = "2021"
publish = false

[lib]
name = "jcan"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
byte_conv = "0.1.1"
clap = {version = "3.2.8", features = ["derive"]}
ctrlc = "3.2.2"
embedded-can = "0.4"
hex = "0.4"
itertools = "0.10"
libc = "0.2"
nb = "1.0"
neli = { version = "0.6", optional = false }
nix = "0.26"
serial_test = "0.9"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs", version = "2.0.0-pre.0" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cc = "1.0.78"

