[package]
name = "jcan"
version = "0.1.11"
edition = "2021"
publish = false
links = "jcan"

[lib]
name = "jcan"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
embedded-can = "0.4"
nix = "0.26"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs", version = "2.0.0-pre.0" }
cxx = "1.0"
log = "0.4.17"
env_logger = "0.10.0"

[build-dependencies]
cxx-build = "1.0"
cc = "1.0.78"
