[package]
name = "jorzacan_python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jorzacan_python"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
jorzacan = { version = "0.1.0", path = "../jorzacan" }
pyo3 = { version = "0.17.3", features = ["extension-module"] }


